--- a/About us.html
+++ b/About us.html
@@ -62,7 +62,7 @@
      <h1>SANGAT</h1>
      <ul class="nav">
           
- <li><a href="home.html">Home</a></li>
+ <li><a href="index.html">index</a></li>
     <li><a href="About us.html">About us</a></li>
        <li><a href="Menu.html">Menu</a></li>
           <li><a href="Contact.html">Contact</a></li>
@@ -79,3 +79,4 @@ Hamari koshish hoti hai ke har guest ko comfortable environment ke saath excelle
 </footer>
 </body>
 </html>
+
