--- a/Contact.html
+++ b/Contact.html
@@ -70,7 +70,7 @@
 <body>
 <header>
     <ul class="nav">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">index</a></li>
         <li><a href="About us.html">About us</a></li>
         <li><a href="Menu.html">Menu</a></li>
         <li><a href="Contact.html">Contact</a></li>
@@ -89,3 +89,4 @@
 
 </body>
 </html>
+
