--- a/Menu.html
+++ b/Menu.html
@@ -110,7 +110,7 @@
 <header>
     <h1>Our Menu</h1>
     <ul class="nav">
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">index</a></li>
         <li><a href="About us.html">About Us</a></li>
         <li><a href="Menu.html">Menu</a></li>
         <li><a href="Contact.html">Contact</a></li>
@@ -182,3 +182,4 @@
 
 </body>
 </html>
+
