--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
    <p>Where Taste Meets Tradition</p>
    <button>Explore menu</button>
    <ul class="nav">
- <li><a href="#home">Home</a></li>
+ <li><a href="#index">index</a></li>
     <li><a href="About us.html">About us</a></li>
        <li><a href="Menu.html">Menu</a></li>
           <li><a href="Contact.html">Contact</a></li>
@@ -135,4 +135,5 @@
 </footer>
 </body>
 </html>
+
 
